--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,34 @@
-.App {
-  text-align: center;
+html{
+  min-height: 100px;
 }
-
-.App-logo {
-  height: 40vmin;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: url(http://getwallpapers.com/wallpaper/full/b/a/0/765304-cool-best-background-wallpapers-1920x1080.jpg) no-repeat center center fixed;
+  background-size: cover;
+  //background-position: bottom;
+  min-height: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+form{
+  padding: 20px;
+  margin-top: 30px;
 }
-
-.App-link {
-  color: #09d3ac;
+form button, form h5{
+  margin: 20px 0;
+}
+input[type="text"]:not(.browser-default):focus:not([readonly]), 
+input[type="email"]:not(.browser-default):focus:not([readonly]),
+input[type="password"]:not(.browser-default):focus:not([readonly]), 
+textarea.materialize-textarea:focus:not([readonly]){
+  border-color: #ec407a;
+  box-shadow: none;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
