--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.content{
+  padding: 40px;
+  text-align: justify;
+}
+.flow-text{
+  margin: 6%;
+  font-size: 1.2rem;
+}
+i:hover{
+  cursor: pointer;
+}
